# pdf_ingestion_DAB

./: .gitignore  NOTICE.md  README.md  databricks.yml
archives/notebook_based_template/: databricks.yml.tmpl
archives/notebook_based_template/resources/: {{.project_name}}_benchmark.yml.tmpl
archives/notebook_based_template/src/: Async_Large_File_Processing.py  Bronze-pdf_batch_ingestion_binary_foreachbatch.py.tmpl  Silver-pdf_batch_ingestion_binary_foreachbatch.py.tmpl
benchmark/: benchmarking_preparation.py  benchmarking_reporting.py  run.sh
pdf_ingestion_template/: databricks_template_schema.json
pdf_ingestion_template/benchmark/: run.sh
pdf_ingestion_template/template/: databricks.yml.tmpl  pyproject.toml
pdf_ingestion_template/template/resources/: {{.project_name}}_benchmark.yml.tmpl  {{.project_name}}_job.yml.tmpl
pdf_ingestion_template/template/resources/dab/: {{.project_name}}_benchmark.yml.tmpl  {{.project_name}}_dev.yml.tmpl  {{.project_name}}_job.yml.tmpl
pdf_ingestion_template/template/resources/databricks/: tesseract_install_init_script.sh
pdf_ingestion_template/template/src/: Async_Large_File_Processing.py  Silver-pdf_batch_ingestion_binary_foreachbatch.py  Silver-pdf_batch_ingestion_binary_foreachbatch.py.tmpl
pdf_ingestion_template/template/src/pdf_ingestion/: bronze_streaming_task.py  helper_utils.py  large_file_async_task.py  page_count_util.py  silver_streaming_task.py  silver_streaming_task.py.tmpl
pdf_ingestion_template/template/src/pdf_ingestion/parsers/: __init__.py  base.py  databricks_ai_parse_parser.py  factory.py  unstructured_parser.py
pdf_ingestion_template/template/tests/: test_bronze_streaming_task.py  test_helper_utils.py  test_large_file_async_task.py  test_silver_streaming_task.py
pdf_ingestion_template/template/tests/parsers/: test_base.py  test_unstructured_parser.py
rendered_project_testing/: databricks.yml  pyproject.toml
rendered_project_testing/docs/: Technical_Overview.md
rendered_project_testing/notebooks/: OCR_scala.scala  Silver-pdf_batch_ingestion_binary_foreachbatch.py
rendered_project_testing/resources/dab/: Jas_Test_1_benchmark.yml  Jas_Test_1_job.yml  Jas_Test_benchmark.yml  Jas_Test_job.yml
rendered_project_testing/src/: Async_Large_File_Processing.py  Bronze-pdf_batch_ingestion_binary_foreachbatch.py  Silver-pdf_batch_ingestion_binary_foreachbatch.py  helpers.py
rendered_project_testing/src/pdf_ingestion/: bronze_streaming_task.py  helper_utils.py  large_file_async_task.py  pdf_processing.py  reporting_task.py  silver_streaming_task.py
rendered_project_testing/src/pdf_ingestion/parsers/: __init__.py  base.py  databricks_parser.py  factory.py  unstructured_parser.py
rendered_project_testing/tests/: conftest.py
rendered_project_testing/tests/parsers/: test_base.py  test_unstructured_parser.py
rendered_project_testing/tests/pdf_ingestion/: test_bronze_streaming_task.py  test_helper_utils.py  test_large_file_async_task.py  test_reporting_task.py  test_silver_streaming_task.py
resources/: pdf_ingestion_benchmark.yml  pdf_ingestion_job.yml
src/: Async-File-Processing.py  Bronze-pdf_batch_ingestion_binary_foreachbatch.py  Silver-pdf_batch_ingestion_binary_foreachbatch.py  configs.py  helpers.py  reporting.py
